[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "handsome"
version = "0.0.1"
description = "Rasterizer for 2D and 3D image primitives based off of NumPy"
authors = [
    { name = "Stephen [Bracket] McCray", email = "mcbracket@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "phillip @ https://github.com/bracket/phillip/archive/refs/heads/master.tar.gz",
    "sweatervest @ https://github.com/bracket/sweatervest/archive/refs/heads/master.tar.gz",
    "numpy",
    "pillow",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["handsome*"]
